RESOLVED FIXED59646
Fixed a small leak related to CSSValues when deallocating a DOMWrapperWorld
https://bugs.webkit.org/show_bug.cgi?id=59646
Summary Fixed a small leak related to CSSValues when deallocating a DOMWrapperWorld
Geoffrey Garen
Reported 2011-04-27 16:00:16 PDT
Fixed a small leak related to CSSValues when deallocating a DOMWrapperWorld
Attachments
Patch (4.55 KB, patch)
2011-04-27 16:05 PDT, Geoffrey Garen
sam: review+
Geoffrey Garen
Comment 1 2011-04-27 16:05:41 PDT
Sam Weinig
Comment 2 2011-04-27 16:14:11 PDT
Comment on attachment 91368 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=91368&action=review > Source/WebCore/bindings/js/JSDOMBinding.h:-221 > - HashMap<CSSValue*, void*>& cssValueRoots(); Can we remove the forward declaration of CSSValue here now?
Geoffrey Garen
Comment 3 2011-04-27 16:25:18 PDT
> Can we remove the forward declaration of CSSValue here now? As you wish!
Geoffrey Garen
Comment 4 2011-04-27 17:19:54 PDT
Note You need to log in before you can comment on or make changes to this bug.