Source/WebCore/bindings/js/JSCSSStyleDeclarationCustom.cpp
@@ -191,7 +191,7 @@ JSValue JSCSSStyleDeclaration::getPropertyCSSValue(ExecState* exec)
     if (!cssValue)
         return jsNull();
 
-    cssValueRoots().add(cssValue.get(), root(impl())); // Balanced by JSCSSValueOwner::finalize().
+    currentWorld(exec)->m_cssValueRoots.add(cssValue.get(), root(impl())); // Balanced by JSCSSValueOwner::finalize().
     return toJS(exec, globalObject(), WTF::getPtr(cssValue));
 }
 
